# hab

./: .gitignore  .terraformignore  README.md
deployment/: README.md
deployment/jobs/: api.hcl  dashboard.nomad.hcl  hab-ve-direct-big.hcl  hab-ve-direct-ext.hcl  hab-ve-direct-lil.hcl  hab-ve-mk3.hcl  registry.nomad.hcl  terraform-agent.hcl  unifi.hcl
deployment/packs/: README.md
deployment/packs/container_registry/: README.md  metadata.hcl  outputs.tpl
deployment/packs/container_registry/templates/: container_registry.nomad.tpl
hab-api/: Cargo.toml  Dockerfile  env.dev
hab-api/src/: config.rs  main.rs
hab-bcm/: Cargo.toml  README.md  install-toolchain  rust-toolchain.toml
hab-bcm/.cargo/: config.toml
hab-bcm/src/: board.rs  device.rs  main.rs
hab-bcm/src/device/: bme680.rs  led.rs
hab-magtag/: Cargo.toml  README.md
hab-magtag/.cargo/: config.toml
hab-magtag/src/: main.rs
hab-ve-direct/: Cargo.toml  Dockerfile
hab-ve-direct/src/: config.rs  main.rs  parser.rs  ve_direct.rs
hab-ve-mk3/: .gitignore  Cargo.toml  Dockerfile  README.md  hab-ve-mk3.toml.example
hab-ve-mk3/scripts/: mount-device  share-device
hab-ve-mk3/src/: config.rs  decoder.rs  main.rs  mk3.rs
habctl/src/hardware/victron/: ve_direct.rs
habhub/: CMakeLists.txt  Justfile  README.md
infrastructure/: Justfile  README.md  pyproject.toml
infrastructure/ansible/: README.md  inventory.yaml
infrastructure/ansible/playbooks/: site.yaml
infrastructure/ansible/playbooks/roles/hab-server/files/etc/traefik/: traefik-routes.yaml
infrastructure/ansible/playbooks/roles/hab-server/handlers/: main.yaml
infrastructure/ansible/playbooks/roles/hab-server/tasks/: main.yaml
infrastructure/ansible/playbooks/roles/hab-server/templates/etc/systemd/system/: traefik.service.j2
infrastructure/ansible/playbooks/roles/hab-server/templates/etc/traefik/: traefik.yaml.j2
infrastructure/host_vars/: habctl.hab.mju.io.yaml
infrastructure/playbooks/: site.yaml
infrastructure/playbooks/roles/common/tasks/: main.yaml
infrastructure/playbooks/roles/hab-server/files/etc/consul.d/: consul.hcl
infrastructure/playbooks/roles/hab-server/files/etc/nomad.d/: nomad.hcl
infrastructure/playbooks/roles/hab-server/files/etc/samba/: smb.conf
infrastructure/playbooks/roles/hab-server/files/etc/traefik/: traefik-routes.yaml
infrastructure/playbooks/roles/hab-server/files/etc/vault.d/: vault.hcl
infrastructure/playbooks/roles/hab-server/handlers/: main.yaml
infrastructure/playbooks/roles/hab-server/tasks/: main.yaml
infrastructure/terraform/env/prod/00-auth/: provider.tf
infrastructure/terraform/env/prod/01-network/: .terraform.lock.hcl  dns.tf  interfaces.hcl  interfaces.tf  provider.tf  router-identity.tf  routes.tf  variables.tf  vlan.tf
