[package]
name = "hab-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.19"
influxdb2 = "0.4.2"
influxdb2-structmap = "0.2.0"
log = "0.4.19"
num-traits = "0.2.16"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
toml = "0.7.6"
