[package]
name = "hab-bcm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
gregarious-labs-thing = { path = "../../gregarious/gregarious-labs-thing" }
# stm32 and USB are not yet published on crates.io - rev isn't special, just the tip of main as of this commit
embassy-stm32 = { version = "0.1.0", features = ["nightly", "unstable-traits", "defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-any", "exti", "embedded-sdmmc", "chrono"], git = "https://github.com/embassy-rs/embassy.git", rev = "a4d78a655217fadcf005b0ae835eb115594dc2b2" }
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.3", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-1_000_000"], git = "https://github.com/embassy-rs/embassy.git", rev = "a4d78a655217fadcf005b0ae835eb115594dc2b2" }
embassy-usb = { version = "0.1.0", features = ["defmt"], git = "https://github.com/embassy-rs/embassy.git", rev = "a4d78a655217fadcf005b0ae835eb115594dc2b2" }
embassy-net = { version = "0.1.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "nightly"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = { version = "0.5.0" }
embedded-io-async = { version = "0.5.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = { version = "1.1", features = ["nightly"]}
chrono = { version = "^0.4", default-features = false}
bme680 = "0.6.0"
hd44780-driver = "0.4.0"

[profile.release]
debug = 2
