[package]
name = "hab_magtag"
version = "0.1.0"
authors = ["David Kern <david@mju.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "0.2.3"
esp-hal-common = { version = "0.10.0" }
esp32s2-hal = { version = "0.10.0", features = ["embassy-time-timg0", "rt"] }
embedded-svc = { version = "0.25.1", default-features = false, features = [] }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "b82f1e7009bef7e32f0918be5b186188aa5e7109", features = ["macros"] }
embassy-executor = { version = "0.2.0", package = "embassy-executor", features = ["arch-xtensa", "nightly", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
embassy-futures = { version = "0.1.0" }
futures-util = { version = "0.3.28", default-features = false }
embedded-io = "0.4.0"
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "proto-dns", "socket-tcp", "socket-icmp", "socket-udp", "socket-dns", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
log = "0.4.18"
heapless = { version = "0.7.16", default-features = false }
embassy-net = { version = "0.1.0", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
esp-println = { version = "0.5.0", features = ["esp32s2", "log"] }
esp-backtrace = { version = "0.7.0", features = ["esp32s2", "panic-handler", "exception-handler", "print-uart"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", rev = "c7ca849274cf3d7a08b49c260bb46693c91c85c0", features = ["esp32s2", "embassy-net", "embedded-svc", "wifi"] }

[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3

[profile.dev]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
