[package]
name = "hab-ve-direct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bitflags = "1.2.1"
bytes = "1.4.0"
clap = { version = "4.3.19", features = ["derive"] }
influxdb2 = "0.4.2"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.174", features = ["derive"] }
serial-io = { version = "0.3.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.29.1", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["codec"] }
toml = "0.7.6"
futures-util = "0.3.28"
