[package]
name = "hab-ve-mk3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bitflags = "1.3.2"
bytes = "1.3.0"
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive"] }
influxdb = "0.5.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serial-io = "0.3.0"
tokio = { version = "1.22.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }
